--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Page Previews</title>
+    <title>Chakri's Research Dashboard</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -11,8 +11,8 @@
     <div class="background-animation"></div>
 
     <header class="main-header">
-        <h1>Your Dynamic Page Hub</h1>
-        <p>Explore a collection of beautifully crafted pages.</p>
+        <h1>Research Dashboard</h1>
+        <p>Research reports crafted by Chakrdhar Kaveri.</p>
     </header>
 
     <main class="page-grid">
