--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chakri's Research Dashboard</title>
+    <title>Chakradhar Research</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -11,15 +11,14 @@
     <div class="background-animation"></div>
 
     <header class="main-header">
-        <h1>Research Dashboard</h1>
-        <p>Research reports crafted by Chakrdhar Kaveri.</p>
+        <h1>Research reports link hub</h1>
+        <p>A collection of Chakradhar's research reports.</p>
     </header>
 
-    <main class="page-grid">
-        </main>
+    <main class="link-grid"> </main>
 
     <footer class="main-footer">
-        <p>&copy; 2025 Dynamic Page Hub. All rights reserved.</p>
+        <p>&copy; 2025 Your Link Hub. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
