--- a/storage.html
+++ b/storage.html
@@ -441,7 +441,7 @@
         </section>
 
         <footer class="text-center border-t pt-8 mt-8 border-gray-300">
-            <p class="text-gray-600">Data synthesized from the "Comprehensive Analysis of Cloud Storage Solutions" report.</p>
+            <p class="text-gray-600">Data synthesized from extensive research by Chakradhar.</p>
             <p class="text-sm text-gray-500 mt-1">This infographic is for informational purposes only. Prices and features are subject to change. Always verify with the provider.</p>
         </footer>
 
