--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main class="link-grid"> </main>
 
     <footer class="main-footer">
-        <p>&copy; 2025 Your Link Hub. All rights reserved.</p>
+        <p>&copy; 2025 Chakradhar Kaveri. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
