--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="background-animation"></div>
 
     <header class="main-header">
-        <h1>Research reports link hub</h1>
+        <h1>Kaveri Research Lab</h1>
         <p>A collection of Chakradhar's research reports.</p>
     </header>
 
