--- a/NL-CH-IT.html
+++ b/NL-CH-IT.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>5-Day Family Tesla Adventure: NL to CH & IT</title>
+    <title>5-Day Trip: NL to CH & IT</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -81,7 +81,7 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center">
-                    <h1 class="text-xl md:text-2xl font-bold text-[#3A868C]">Family Road Trip Planner</h1>
+                    <h1 class="text-xl md:text-2xl font-bold text-[#3A868C]">Swiss and Milan Trip Plan</h1>
                 </div>
                 <nav class="hidden md:flex space-x-8">
                     <a href="#overview" class="nav-link py-2 text-sm font-medium">Overview</a>
@@ -113,9 +113,9 @@
 
         <!-- Section 1: Overview -->
         <section id="overview" class="mb-16 scroll-mt-20">
-            <h2 class="text-3xl font-bold text-center mb-2 text-[#3A868C]">Your Tesla Adventure Awaits</h2>
+            <h2 class="text-3xl font-bold text-center mb-2 text-[#3A868C]">An Adventure to DE, CH and IT!</h2>
             <p class="text-center text-lg text-gray-600 max-w-3xl mx-auto mb-8">
-                This interactive planner outlines a 5-day family road trip from the Netherlands to Switzerland and Milan. It's designed to balance driving, exploration, and relaxation, all while keeping a close eye on the budget. Explore the sections below to see the full plan.
+                This planner outlines a 5-day family road trip from the Netherlands to Switzerland and Milan. It's designed to balance driving, exploration, and relaxation. Explore the sections below to see the full plan.
             </p>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 text-center mb-12">
                 <div class="bg-white p-6 rounded-xl shadow-lg transform hover:scale-105 transition-transform">
@@ -354,7 +354,7 @@
 
     <footer class="bg-white mt-16">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-6 text-center text-gray-500">
-            <p>&copy; 2025 Family Road Trip Planner. An interactive guide for your next adventure.</p>
+            <p>&copy; 2025 Kaveri Tour Guide. An adventure to Switzerland and Milan</p>
         </div>
     </footer>
 
