--- a/krish.html
+++ b/krish.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Super Skills Cheatsheet!</title>
+    <title>Krishna's Super Skills Tracker!</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -96,10 +96,10 @@
     <header class="header-bg py-6 shadow-lg">
         <div class="container mx-auto px-6 text-center">
             <h1 class="text-4xl md:text-5xl font-extrabold text-white drop-shadow-md">
-                My Super Skills Cheatsheet! ✨
+                My Super Skills Tracker! ✨
             </h1>
             <p class="mt-2 text-lg text-white/90">
-                Your daily guide to being awesome!
+                Krishna's daily guide to being awesome!
             </p>
         </div>
     </header>
